# AI-Startup-Board

./: .gitignore  03-protocol.md  CLAUDE.md  HANDOFF.md  _schema.yaml  operator-ceo.md
synthetic-board/: .gitignore  Makefile  README.md  pyproject.toml
synthetic-board/docs/: 01-requirements.md  02-architecture.md  04-personas.md  06-memo.md  07-evaluation.md  08-roadmap.md  plan-v2.md
synthetic-board/docs/decisions/: 001-defer-pyswisseph.md  002-explicit-seat-identity-in-client.md  003-word-boundary-redaction.md  004-wall-clock-monotonic.md  005-retry-path-tests-patch-validator.md  006-cli-runtime-and-paths.md  007-ab-harness.md  008-v2-chart-grounding-relaxation.md  009-memo-schema-versioning.md  010-advisor-gtm-only-default-false.md  011-confidence-weighted-ceiling.md  012-v2-graph-wiring.md  013-v2-synthesis-budgets-and-ip.md  README.md
synthetic-board/personas/: _schema.yaml  _template.md  devils-advocate.md  growth-advisor.md  marketing.md  outsider.md  technical.md  visionary.md
synthetic-board/protocols/: idea-screen-v2.yaml  idea-screen.yaml
synthetic-board/schemas/: memo-v1.schema.json  memo.schema.json  petition.schema.json  seat-output.schema.json
synthetic-board/src/sboard/: __init__.py  ab.py  ab_score.py  baseline.py  cli.py  protocol.py  schemas.py  service.py
synthetic-board/src/sboard/chair/: anonymizer.py  diversity.py  meeting_state.py  state_machine.py  states.py  voting.py
synthetic-board/src/sboard/db/: store.py
synthetic-board/src/sboard/seats/: seat.py  (+2 more)
synthetic-board/tests/ab/: baseline_prompt.txt  score.py
synthetic-board/tests/integration/: test_ab.py  test_cli.py  test_v2_wiring.py
synthetic-board/tests/unit/: test_anonymization.py  test_memo.py  test_memo_v2.py  test_persistence.py  test_persona_loader.py  test_personas_v2.py  test_scaffold.py  test_schemas.py  test_schemas_v2.py  test_seat.py  test_state_machine.py  test_states_v2.py
(+7 files in other folders)
