[project]
name = "sboard"
version = "0.1.0"
description = "Synthetic Advisory Board — multi-agent deliberation with deterministic protocol and signed memos"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Przemyslaw" }
]

dependencies = [
    "anthropic>=0.40.0",
    "langgraph>=0.2.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.0",
    "python-dateutil>=2.8.0"
]

[project.optional-dependencies]
chart = [
    "pyswisseph>=2.10.0"
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "types-PyYAML>=6.0.0",
    "types-jsonschema>=4.20.0"
]

[project.scripts]
sboard = "sboard.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sboard"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C90", "UP", "SIM", "RET"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.flake8-bugbear]
# Typer relies on calling Argument()/Option() in parameter defaults; these are
# the framework's declarative API, not mutable-default bugs.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers --cov=sboard --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/sboard"]
omit = ["*/migrations/*", "*/tests/*"]
